[project]
name = "web-ui-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
]

[project.optional-dependencies]
static-build = [
    "markdown>=3.6.0",
    "pygments>=2.17.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
